abstract class Agregador<T, K> {
  T geraIterador();
  adicionar(K objeto);
}
