enum GrupoPlanta {
  pteridofita('pteridófita'),
  briofita('briófitas'),
  gimnosperma('gimnosperma'),
  angiosperma('angiosperma');

  final String nome;

  const GrupoPlanta(this.nome);
}
